objects/ASI_CRM_CN_Authorized_Supplier__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Accounts_Additional_Field__c</fullName>
        <label>Outlet/WS Name</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Authorized Suppliers</relationshipLabel>
        <relationshipName>Authorized_Suppliers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2)</booleanFilter>
            <filterItems>
                <field>ASI_MFM_Brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN FOC Brand</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Authorized Supplier</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>Authorized Suppliers</relationshipLabel>
        <relationshipName>Authorized_Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sender_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sender Name</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Authorized Suppliers (Sender Name)</relationshipLabel>
        <relationshipName>Authorized_Suppliers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Authorized Supplier</label>
    <nameField>
        <displayFormat>AS-{0000000}</displayFormat>
        <label>Authorized Supplier ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized Suppliers</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Authorized_Supplier</fullName>
        <active>true</active>
        <label>CN Authorized Supplier</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>